--- a/src/assets/styles/components/_background.css
+++ b/src/assets/styles/components/_background.css
@@ -1,4 +1,4 @@
-.dark-gradient {
+.bg-gradient-dark {
   background-color: rgb(10, 10, 10);
   background-image: radial-gradient(
     ellipse 80% 80% at 50% -20%,
@@ -7,7 +7,7 @@
   );
 }
 
-.solid-gradient {
+.bg-gradient-solid {
   background-image: radial-gradient(
     ellipse 80% 80% at 50% -20%,
     #0e2d37,
@@ -23,13 +23,23 @@ blue_(ncs)-100 -- rgb(11, 29, 38)
 
 /* absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(8,47,73,.5),rgba(8,47,73,.3))] */
 
-.exp-gradient {
+.bg-gradient-img {
   background-image: radial-gradient(
       ellipse 80% 80% at 50% -20%,
       rgba(14, 45, 55, 0.3),
       rgba(11, 29, 38, 0.9)
     ),
-    url("https://alexgeer.netlify.app/images/bg-lg.jpg");
+    url("../../images/bg-md.jpg");
   background-position: right center;
   background-size: cover;
+}
+@media screen(md) {
+  .bg-gradient-img {
+    background-image: radial-gradient(
+        ellipse 80% 80% at 50% -20%,
+        rgba(14, 45, 55, 0.3),
+        rgba(11, 29, 38, 0.9)
+      ),
+      url("../../images/bg-lg.jpg");
+  }
 }
