--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,4 +1,5 @@
 /* @import "base/_global.css"; */
+@import "base/_typography.css";
 
 @import "components/_background.css";
 @import "components/_link.css";
