--- a/src/index.css
+++ b/src/index.css
@@ -4,50 +4,78 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: "Poppins";
-  src: url("./assets/fonts/Poppins/Poppins-Regular.ttf") format("truetype");
+  font-family: "Oswald";
+  src: url("./assets/fonts/Oswald/static/Oswald-ExtraLight.ttf")
+    format("truetype");
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Oswald";
+  src: url("./assets/fonts/Oswald/static/Oswald-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Oswald";
+  src: url("./assets/fonts/Oswald/static/Oswald-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("./assets/fonts/Poppins/Poppins-Bold.ttf") format("truetype");
-  font-weight: 700;
+  font-family: "Oswald";
+  src: url("./assets/fonts/Oswald/static/Oswald-Medium.ttf") format("truetype");
+  font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Poppins";
-  src: url("./assets/fonts/Poppins/Poppins-Italic.ttf") format("truetype");
+  font-family: "Fredericka_The_Great";
+  src: url("./assets/fonts/Fredericka_the_Great/FrederickatheGreat-Regular.ttf")
+    format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Open_Sans";
+  src: url("./assets/fonts/Open_Sans/static/OpenSans-Light.ttf")
+    format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Open_Sans";
+  src: url("./assets/fonts/Open_Sans/static/OpenSans-LightItalic.ttf")
+    format("truetype");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Open_Sans";
+  src: url("./assets/fonts/Open_Sans/static/OpenSans-Regular.ttf")
+    format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Open_Sans";
+  src: url("./assets/fonts/Open_Sans/static/OpenSans-Italic.ttf")
+    format("truetype");
   font-weight: 400;
   font-style: italic;
 }
 
 @font-face {
-  font-family: "Rufina";
-  src: url("./assets/fonts/Rufina/Rufina-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Rufina";
-  src: url("./assets/fonts/Rufina/Rufina-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Sintony";
-  src: url("./assets/fonts/Sintony/Sintony-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Sintony";
-  src: url("./assets/fonts/Sintony/Sintony-Bold.ttf") format("truetype");
-  font-weight: 700;
+  font-family: "Open_Sans";
+  src: url("./assets/fonts/Open_Sans/static/OpenSans-Medium.ttf")
+    format("truetype");
+  font-weight: 500;
   font-style: normal;
 }
