--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -1,6 +1,7 @@
 /* @import "base/_global.css"; */
 @import "base/_typography.css";
 
+@import "components/_altcha.css";
 @import "components/_background.css";
 @import "components/_link.css";
 @import "components/_section.css";
