implement altcha first try

--- a/src/assets/styles/base/_global.css
+++ b/src/assets/styles/base/_global.css
@@ -2,6 +2,8 @@
   /* --polynesian-blue: theme(colors.polynesian_blue.500);
   --navy-blue: theme(colors.navy_blue.500); */
   --green: theme(colors.mindaro.200);
+  --altcha-color-border: theme(colors.mindaro.900);
+  --altcha-max-width: 100%;
 }
 
 *,
